added test configuration for circle ci. also added a simple ui test

--- a/circle.yml
+++ b/circle.yml
@@ -19,29 +19,60 @@ machine:
 
 dependencies:
     pre:
-        - echo y | android update sdk --no-ui --all --filter "tools,android-25,build-tools-25.0.2,platform-tools,extra-android-m2repository,extra-android-support,extra-google-m2repository,extra-google-google_play_services"
+#       - echo y | android update sdk --no-ui --all --filter "tools,android-25,build-tools-25.0.2,platform-tools,extra-android-m2repository,extra-android-support,extra-google-m2repository,extra-google-google_play_services"
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,android-25
+        - echo y | android update sdk --no-ui --all --filter build-tools-25.0.2
+        - echo y | android update sdk --no-ui --all --filter android-25
+        - echo y | android update sdk --no-ui --all --filter tools
+        - echo y | android update sdk --no-ui --all --filter extra-android-m2repository
+        - echo y | android update sdk --no-ui --all --filter extra-android-support
+        - echo y | android update sdk --no-ui --all --filter extra-google-google_play_services
+        - echo y | android update sdk --no-ui --all --filter extra-google-m2repository
+
         - echo y | $ANDROID_HOME/tools/bin/sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
     cache_directories:
         - /usr/local/android-sdk-linux/tools
         - /usr/local/android-sdk-linux/build-tools/25.0.2
 
-# Comment the test stuff out (or remove it) if you don't need it.
-test:
-  pre:
-#    - emulator -avd circleci-android22 -no-audio -no-window:
-#          background: true
-#          parallel: true
-#    - circle-android wait-for-boot
-#    # unlock emulator
-#    - sleep 30
-#    - adb shell input keyevent 82
 
-  override:
+#test:
+#  pre:
+##    - emulator -avd circleci-android22 -no-audio -no-window:
+##          background: true
+##          parallel: true
+##    - circle-android wait-for-boot
+##    # unlock emulator
+##    - sleep 30
+##    - adb shell input keyevent 82
+#
+#  override:
 #    - ./gradlew clean assemble
-    # This will run the tests:
+#     #This will run the tests:
 #   - ./gradlew assemble connectedDebugAndroidTest -PdisablePreDex --console=plain --info
-   - ./gradlew assemble
+#   - ./gradlew assemble
+#
+#  post:
+##      - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+##      - cp -r app/build/outputs/androidTest-results/connected/ $CIRCLE_TEST_REPORTS
 
-  post:
-#      - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-#      - cp -r app/build/outputs/androidTest-results/connected/ $CIRCLE_TEST_REPORTS
+
+test:
+   override:
+     # start lint
+     #- ./gradlew lint
+     # start unit tests
+     - ./gradlew test
+     # start the emulator
+     - emulator -avd circleci-android24 -no-window:
+         background: true
+         parallel: true
+     # wait for it to have booted
+     - circle-android wait-for-boot
+     # run tests  against the emulator.
+     - ./gradlew connectedAndroidTest
+     # copy lint outputs to artifacts
+     - cp -r app/build/reports/lint-* $CIRCLE_ARTIFACTS
+     # copy the build outputs to artifacts
+     - cp -r app/build/outputs/apk/* $CIRCLE_ARTIFACTS
+     # copy the test results to the test results directory.
+     - cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
