--- a/circle.yml
+++ b/circle.yml
@@ -63,11 +63,13 @@ test:
      # start unit tests
      - ./gradlew test
      # start the emulator
-     - emulator -avd circleci-android24 -no-window:
+     - emulator -avd circleci-android25 -no-window:
          background: true
          parallel: true
      # wait for it to have booted
      - circle-android wait-for-boot
+     - sleep 30
+     - adb shell input keyevent 82
      # run tests  against the emulator.
      - ./gradlew connectedAndroidTest
      # copy lint outputs to artifacts
