--- a/circle.yml
+++ b/circle.yml
@@ -29,8 +29,8 @@ test:
      - ./gradlew test
 
      # copy lint outputs to artifacts
-     - cp -r app/build/reports/lint-* $CIRCLE_ARTIFACTS
+     #- cp -r app/build/reports/lint-* $CIRCLE_ARTIFACTS
      # copy the build outputs to artifacts
-     - cp -r app/build/outputs/apk/* $CIRCLE_ARTIFACTS
+     #- cp -r app/build/outputs/apk/* $CIRCLE_ARTIFACTS
      # copy the test results to the test results directory.
      #- cp -r app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
