--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     environment:
       ANDROID_HOME: /opt/android
     steps:
+      - run: apt-get -qq update; apt-get -y install git openssh-client
       - checkout
       - run:
           name: System information
