updated base repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/working_directory
     docker:
-      - image: beevelop/android:latest
+      - image: urbansitter/android-java8:latest
     environment:
       ANDROID_HOME: /opt/android
     steps:
