updated docker file

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,49 +1,21 @@
-FROM ubuntu:16.04
+FROM openjdk:8-jdk-alpine
 
-RUN apt-get update
+RUN apk update && \
+    apk upgrade && \
+    apk add --no-cache bash git openssh
 
-# Install java8
-RUN apt-get install -y software-properties-common \
-    && add-apt-repository -y ppa:webupd8team/java \
-    && apt-get update
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 \
-    select true | /usr/bin/debconf-set-selections
-RUN apt-get install -y oracle-java8-installer
+ENV ANDROID_SDK_URL http://dl.google.com/android/repository/sdk-tools-linux-3859397.zip
+ENV ANDROID_HOME /opt/android-sdk
 
-# Install Deps
-RUN dpkg --add-architecture i386 && apt-get update \
-    && apt-get install -y --force-yes expect wget \
-    libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
+RUN mkdir -p ${ANDROID_HOME} && cd ${ANDROID_HOME} && \
+    wget -O tools.zip ${ANDROID_SDK_URL} && \
+    unzip tools.zip && rm tools.zip
 
-# Install Android SDK
-RUN cd /opt && wget --output-document=android-sdk.tgz --quiet \
-    http://dl.google.com/android/android-sdk_r24.4.1-linux.tgz \
-    && tar xzf android-sdk.tgz && rm -f android-sdk.tgz \
-    && chown -R root.root android-sdk-linux
+ENV PATH $PATH:$ANDROID_HOME/tools
+ENV PATH $PATH:$ANDROID_HOME/platform-tools
 
-# Setup environment
-ENV ANDROID_HOME /opt/android-sdk-linux
-ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+RUN echo "y" | android update sdk --no-ui --all --filter " \
+              tools,android-25,build-tools-25.0.3,platform-tools, \
+              extra-android-support,extra-google-m2repository,extra-google-google_play_services"
 
-# Install sdk elements
-COPY tools /opt/tools
-ENV PATH ${PATH}:/opt/tools
-RUN echo y | android update sdk --no-ui --all --filter "tools,android-25,build-tools-25.0.3,platform-tools,extra-android-m2repository,extra-android-support,extra-google-m2repository,extra-google-google_play_services"
-
-RUN apt-get install -y unzip
-
-# Install gradle
-RUN cd /opt && wget --output-document=gradle.zip \
-    https://services.gradle.org/distributions/gradle-3.3-all.zip \
-    && unzip gradle.zip && rm -f gradle.zip \
-    && chown -R root.root gradle-3.3
-
-ENV GRADLE_HOME=/opt/gradle-3.3
-ENV PATH=$PATH:$GRADLE_HOME/bin
-
-# Cleaning
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Go to workspace
-RUN mkdir -p /opt/workspace
-WORKDIR /opt/workspace
+RUN echo y | $ANDROID_HOME/tools/bin/sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
