--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           name: Build
           command: ./gradlew assembleDebug
 
-  deployment:
-      hockey:
-          commands:
-            - ipa distribute:hockeyapp -m "test build" --token 7784ea63ac66466bb86de0b303dab0c9
+      - deploy:
+          hockey:
+              commands:
+                - ipa distribute:hockeyapp -m "test build" --token 7784ea63ac66466bb86de0b303dab0c9
